src/objects/Course_Equivalency_Rules__c.object
<CustomObject>
    <description>Determines whether an external institution course is representative of equivalency of a currently offered course</description>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The course that is related to the rule</description>
        <label>Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Course Equivalency Rules</relationshipLabel>
        <relationshipName>Course_Equivalency_Rules_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The External Course Record that ties to an individual course.</description>
        <label>External Course</label>
        <referenceTo>hed__Course__c</referenceTo>
        <relationshipLabel>Course Equivalency Rules (External Course)</relationshipLabel>
        <relationshipName>Course_Equivalency_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Grade__c</fullName>
        <description>The required gpa for a course to transfer</description>
        <label>Required Grade</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_End_Date__c</fullName>
        <description>The end date for which the rule is valid (i.e. all courses taken through August 2012)</description>
        <label>Rule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule_Start_Date__c</fullName>
        <description>The start date for which the rule is valid (i.e. all courses taken starting August 2012)</description>
        <label>Rule Start Date</label>
        <type>Date</type>
    </fields>
    <label>Course Equivalency Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CER-{0000}</displayFormat>
        <label>External Course Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Equivalency Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>